--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         }
     ],
     "require": {
+        "php": ">=8.0.2",
         "yiisoft/yii2": ">=2.0.4",
         "symfony/mailer": "~6.0.0"
     },
