--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,5 +2,4 @@
 
 open_collective: yiisoft
 github: [yiisoft]
-tidelift: "packagist/yiisoft/yii2-symfonymailer
-"
+tidelift: "packagist/yiisoft/yii2-symfonymailer"
