--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest]
-                php: ['8.0']
+                php: ['7.4', '8.0']
 
         steps:
             - name: Install sendmail
