--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,15 @@ jobs:
                   restore-keys: ${{ runner.os }}-composer-
             - name: Install dependencies
               run: composer update $DEFAULT_COMPOSER_FLAGS
+            - name: Run unit tests with coverage
+              run: vendor/bin/phpunit --verbose --coverage-clover=coverage.clover --colors=always
+              if: matrix.php == '7.4'
             - name: Run unit tests without coverage
               run: vendor/bin/phpunit --verbose --colors=always
+              if: matrix.php != '7.4'
+            - name: Upload code coverage
+              run: |
+                  wget https://scrutinizer-ci.com/ocular.phar
+                  php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+              if: matrix.php == '7.4'
+              continue-on-error: true # if is fork
