--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         }
     ],
     "require": {
-        "php": ">=8.0.2",
+        "php": ">=7.4.0",
         "yiisoft/yii2": ">=2.0.4",
-        "symfony/mailer": "~6.0.0"
+        "symfony/mailer": ">=5.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.10"
