--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,10 +5,16 @@
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
+         forceCoversAnnotation="true"
          stopOnFailure="false">
     <testsuites>
         <testsuite name="Yii2-swiftmailer Test Suite">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
+    <coverage>
+        <include>
+            <directory suffix=".php">src</directory>
+        </include>
+    </coverage>
 </phpunit>
