--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require": {
         "php": ">=7.4.0",
         "yiisoft/yii2": ">=2.0.4",
-        "symfony/mailer": ">=5.4.0"
+        "symfony/mailer": ">=5.4.0",
+        "symfony/http-client": ">=5.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.10"
