--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/mailer": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.5.10"
+        "phpunit/phpunit": "9.5.10",
+        "symplify/easy-coding-standard": "^10.1"
     },
     "repositories": [
         {
