--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
               uses: shivammathur/setup-php@v2
               with:
                   php-version: ${{ matrix.php }}
+                  coverage: pcov
             - name: Get composer cache directory
               id: composer-cache
               run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -35,5 +36,9 @@ jobs:
                   restore-keys: ${{ runner.os }}-composer-
             - name: Install dependencies
               run: composer update $DEFAULT_COMPOSER_FLAGS
-            - name: Run unit tests without coverage
-              run: vendor/bin/phpunit --verbose --colors=always
+            - name: Run unit tests with coverage
+              run: vendor/bin/phpunit --coverage-text
+            - name: Static analysis (Psalm)
+              run: vendor/bin/psalm
+            - name: Test code style
+              run: vendor/bin/ecs
