--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
     "require-dev": {
         "phpunit/phpunit": "9.5.10",
         "symplify/easy-coding-standard": "^10.1",
-        "vimeo/psalm": "^4.22"
+        "vimeo/psalm": "^4.22",
+        "captainhook/captainhook": "^5.10",
+        "captainhook/plugin-composer": "^5.3"
     },
     "repositories": [
         {
@@ -57,7 +59,8 @@
     },
     "config": {
         "allow-plugins": {
-            "yiisoft/yii2-composer": true
+            "yiisoft/yii2-composer": true,
+            "captainhook/plugin-composer": true
         }
     }
 }
