--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
         "symplify/easy-coding-standard": "^10.1",
         "vimeo/psalm": "^4.22",
         "captainhook/captainhook": "^5.10",
-        "captainhook/plugin-composer": "^5.3",
-        "yiisoft/yii2-psr-log-source": "dev-feat-dynamic-logger"
+        "captainhook/plugin-composer": "^5.3"
     },
     "suggest": {
         "yiisoft/yii2-psr-log-source": "Allows routing transport logs to your Yii2 logger"
@@ -44,13 +43,8 @@
         {
             "type": "composer",
             "url": "https://asset-packagist.org"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/SamMousa/yii2-psr-log-source"
         }
     ],
-
     "autoload": {
         "psr-4": {
             "yii\\symfonymailer\\": "src"
