--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=8.1",
         "yiisoft/yii2": ">=2.0.4",
         "symfony/mailer": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.5.10",
-        "symplify/easy-coding-standard": "^10.1",
-        "vimeo/psalm": "^4.22",
+        "phpunit/phpunit": "^10",
+        "symplify/easy-coding-standard": "^10",
+        "vimeo/psalm": "^5",
         "captainhook/captainhook": "^5.10",
         "captainhook/plugin-composer": "^5.3"
     },
