--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,5 +40,7 @@ jobs:
               run: vendor/bin/phpunit --coverage-text
             - name: Static analysis (Psalm)
               run: vendor/bin/psalm
+            - name: Static analysis (phpstan)
+              run: vendor/bin/phpstan
             - name: Test code style
               run: vendor/bin/ecs
