Fix #50: Forward transport logs to the Yii Logger

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         "captainhook/captainhook": "^5.10",
         "captainhook/plugin-composer": "^5.3"
     },
+    "suggest": {
+        "yiisoft/yii2-psr-log-source": "Allows routing transport logs to your Yii2 logger"
+    },
     "repositories": [
         {
             "type": "composer",
