--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,47 +1,31 @@
+on:
+  pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - 'CHANGELOG.md'
+      - '.gitignore'
+      - '.gitattributes'
+      - 'infection.json.dist'
+      - 'psalm.xml'
+
+  push:
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - 'CHANGELOG.md'
+      - '.gitignore'
+      - '.gitattributes'
+      - 'infection.json.dist'
+      - 'psalm.xml'
+
 name: build
 
-on: [push, pull_request]
-
-env:
-    DEFAULT_COMPOSER_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
-
 jobs:
-    phpunit:
-        name: PHP ${{ matrix.php }} on ${{ matrix.os }}
-        runs-on: ${{ matrix.os }}
-        strategy:
-            fail-fast: false
-            matrix:
-                os: [ubuntu-latest]
-                php: ['7.4', '8.0', '8.1']
-
-        steps:
-            - name: Install sendmail
-              run: sudo apt-get install -y sendmail
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Install PHP
-              uses: shivammathur/setup-php@v2
-              with:
-                  php-version: ${{ matrix.php }}
-                  coverage: pcov
-            - name: Get composer cache directory
-              id: composer-cache
-              run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-            - name: Cache composer dependencies
-              uses: actions/cache@v1
-              with:
-                  path: ${{ steps.composer-cache.outputs.dir }}
-                  key: ${{ runner.os }}-composer-${{ matrix.php }}-${{ hashFiles('**/composer.lock') }}
-                  restore-keys: ${{ runner.os }}-composer-${{ matrix.php }}-
-            - name: Install dependencies
-              run: composer update $DEFAULT_COMPOSER_FLAGS
-            - name: Install logging proxy
-              if: ${{ matrix.php != '7.4' }}
-              run: composer require "yiisoft/yii2-psr-log-source"
-            - name: Run unit tests with coverage
-              run: vendor/bin/phpunit --coverage-text
-            - name: Static analysis (Psalm)
-              run: vendor/bin/psalm
-            - name: Test code style
-              run: vendor/bin/ecs
+  phpunit:
+    uses: yiisoft/actions/.github/workflows/phpunit.yml@master
+    with:
+      os: >-
+        ['ubuntu-latest']
+      php: >-
+        ['7.4', '8.0', '8.1', '8.2', '8.3']
