--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -6,7 +6,6 @@ on:
       - 'CHANGELOG.md'
       - '.gitignore'
       - '.gitattributes'
-      - 'infection.json.dist'
       - 'psalm.xml'
 
   push:
@@ -16,17 +15,18 @@ on:
       - 'CHANGELOG.md'
       - '.gitignore'
       - '.gitattributes'
-      - 'infection.json.dist'
       - 'psalm.xml'
 
-name: build
+name: mutation test
 
 jobs:
-  phpunit:
-    uses: yiisoft/actions/.github/workflows/phpunit.yml@master
+  mutation:
+    uses: yiisoft/actions/.github/workflows/roave-infection.yml@master
+    secrets:
+      STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
     with:
-      composer-command: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi --ignore-platform-req=php+
+      extensions: runkit7
       os: >-
         ['ubuntu-latest']
       php: >-
-        ['8.1', '8.2', '8.3']
+        ['8.1']
