--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     "require": {
         "php": ">=8.1",
         "psr/event-dispatcher": "1.0.0",
-        "symfony/mailer": "^7.0",
-        "symfony/mime": "^7.0",
+        "symfony/mailer": "^6.4 || ^7.0",
+        "symfony/mime": "^6.4 || ^7.0",
         "yiisoft/yii2": ">=2.0.4"
     },
     "require-dev": {
